Minor code improvements for benchmarks module